# NFT

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  Cargo.toml  LICENSE  README-Windows.md  README.md  as-pect.config.js  asconfig.json  build.sh  jest.config.js  package.json  rust-toolchain.toml  test.bat  test.sh
.dependabot/: config.yml
.github/: dependabot.yml
.github/scripts/: readme-quick-deploy.sh
.github/workflows/: add-to-devrel.yml  main.yml  readme-ci.yml  tests.yml
contract/: Cargo.toml  compile.js
contract/nft/: Cargo.toml
contracts/assemblyscript/: as-pect.config.js  as-pect.d.ts  as_types.d.ts  asconfig.json  compile  compile.js  test
contracts/assemblyscript/escrow/: main.ts  models.ts
contracts/assemblyscript/escrow/__tests__/: main.simulate.spec.js
contracts/assemblyscript/nep4/: main.ts  model.ts  persistentOrderedMap.ts
contracts/assemblyscript/nep4-basic/: README.md  as-pect.config.js  asconfig.json  crypto.ts  main.ts  package.json  precomp.ts
contracts/assemblyscript/nep4-basic/__tests__/: main.unit.spec.ts
contracts/assemblyscript/nep4-basic/assembly/: as_types.d.ts
contracts/assemblyscript/nep4/__tests__/: contract.unit.spec.ts.old  main.simulate.spec.ts  main.unit.spec.ts  models.unit.spec.ts  nep4.simulate.spec.js.old  nep4.unit.spec.ts
contracts/assemblyscript/public_html/: index.html  nftmusic.js
contracts/assemblyscript/public_html/1/: nftmusic.js
contracts/assemblyscript/public_html/2/: .gitignore  index.html  main.js  midimixer.component.js  nfthistory.js  wasmmidimoduleplayeraudioworkletprocessor.js
contracts/assemblyscript/public_html/3/: .gitignore  index.html  main.js  midimixer.component.js  nearclient.js  rollup-config.js  wasmmidimoduleplayeraudioworkletprocessor.js
contracts/assemblyscript/public_html/common/: exportwavworker.js
contracts/assemblyscript/public_html/gnr8/: nftpartsplayer.js  plainwasmplayer.js  playnftpart.js  test.html
contracts/assemblyscript/public_html/musicspacetrail/: index.html  (+7 more)
contracts/assemblyscript/simulator/: nft.spec.js  sdk-patch-runtime.js
contracts/assemblyscript/testnet/: payforlistening.spec.js  remixtokens.spec.js
contracts/rust/: Cargo.toml  README.md  build.sh
contracts/rust/src/: lib.rs
contracts/rust/src/nep4/: mod.rs
frontend/: package.json  svelte.config.js
frontend/src/: App.svelte  Controls.svelte  interfaces.ts  store.ts  turtle_utils.ts
frontend/src/components/: Controls.svelte  RationalButtonGroup.svelte  TurtlePathMesh.svelte
frontend/src/math/: position.ts  rationals.ts
frontend/src/routes/: index.svelte
integration-tests/: Cargo.toml
integration-tests/rs/: Cargo.toml
integration-tests/rs/src/: tests.rs
integration-tests/src/: tests.rs
integration-tests/ts/: ava.config.cjs  package.json
integration-tests/ts/src/: main.ava.ts  utils.ts
nft/: Cargo.toml
nft-frontend/: package.json
nft/src/: lib.rs
old-frontend/: package.json
old-frontend/public/: index.html
old-frontend/src/: App.svelte  App2.svelte  Controls.svelte  interfaces.ts
paper/: CSTheoryToolkitCMUBib.bib  Paper.aux  Paper.bbl  Paper.bcf  Paper.blg  Paper.brf  Paper.fdb_latexmk  Paper.fls  Paper.out  Paper.run.xml  Paper.tex  TCSToolkit.sty  __latexindent_temp.tex  hw2.ipynb  hw5.ipynb  notes.md  stub.brf  stub.tex
paper/bib/: ref.bib
paper/emoji/: README.md  emoji-doc.tex  emoji-table.def  emoji.sty
paper/old-frontend/src/: Controls.svelte  OptionsPopup.svelte  store.ts
res/: README.md  approval_receiver.wasm  non_fungible_token.wasm  token_receiver.wasm
scripts/: build.bat  build.sh  deleteweb4content.sh  integration_tests.sh  test.sh  unit_tests.sh  uploadweb4content.sh
src/: App.js  config.js  global.css  index.html  index.js  lib.rs  main.test.js  utils.js
src/Components/: CreateNFT.js  InfoBubble.js  MintingTool.js
src/__mocks__/: fileMock.js
src/wallet/login/: index.html
test/: config.js  sim.test.js  test-utils.js
test-approval-receiver/: Cargo.toml
test-approval-receiver/src/: lib.rs
test-token-receiver/: Cargo.toml
test-token-receiver/src/: lib.rs
tests/: init.rs  main.rs
tests-ava/: README.md  ava.config.cjs  ava.testnet.config.cjs  package.json  tsconfig.json
tests-ava/__tests__/: testApproval.ava.ts  testCore.ava.ts  testEnum.ava.ts  utils.ts
tests/common/: mod.rs
tests/contracts/approval-receiver/: Cargo.toml
tests/contracts/approval-receiver/src/: lib.rs
tests/contracts/token-receiver/: Cargo.toml
tests/sim/: utils.rs
tests/tests/: approval.rs  core.rs  enumeration.rs  mod.rs
(+11 files in other folders)
