[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
# remember to include a member for each contract
members = ["nft", "test-approval-receiver", "test-token-receiver"]
exclude = ["integration-tests"]

[patch.crates-io]
near-sdk = { git = "https://github.com/near/near-sdk-rs", branch = "austin/nft_jschema" }
near-contract-standards = { git = "https://github.com/near/near-sdk-rs", branch = "austin/nft_jschema" }
