[package]
name = "non-fungible-token-integration-tests"
version = "1.0.0"
publish = false
edition = "2018"

[dev-dependencies]
near-sdk = "5.5.0"
anyhow = "1.0"
tokio = { version = "1.18.1", features = ["full"] }
near-workspaces = "0.14"
serde_json = "1.0.128"

[[example]]
name = "integration-tests"
path = "src/tests.rs"

